k8s/polybot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
      - name: polybot-container
        image: 933060838752.dkr.ecr.us-east-1.amazonaws.com/polybot_nancyf:252
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        livenessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/_healthz"
            port: 8443
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/_healthz"
            port: 8080



---
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8443
  type: ClusterIP
