k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: nancyf
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nancyf.atech-bot.click
      secretName: tls-secret

  rules:
    - host: nancyf.atech-bot.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polybot-service
                port:
                  number: 8443
